--- a/.gitignore
+++ b/.gitignore
@@ -7,13 +7,15 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+node_modules/
+dist/
+build/
+.pnpm-store/
+.env
+*.log
 
 # Editor directories and files
-.vscode/*
+
 !.vscode/extensions.json
 .idea
 .DS_Store
@@ -22,3 +24,7 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Local Netlify folder
+.netlify
+netlify/functions/config.env
