--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -21,10 +21,11 @@
     "@eslint/js": "^9.21.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@vitejs/plugin-react": "^5.0.1",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "eslint": "^9.21.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^15.15.0",
     "vite": "^6.2.0"
   }
