--- a/package.json
+++ b/package.json
@@ -4,9 +4,17 @@
   "scripts": {
     "dev:client": "pnpm --filter client dev",
     "dev:server": "pnpm --filter server dev",
-    "dev": "concurrently \"pnpm dev:server\" \"pnpm dev:client\""
+    "dev": "concurrently \"pnpm dev:server\" \"pnpm dev:client\"",
+    "lint": "pnpm -r lint",
+    "format": "prettier . -w",
+    "format:check": "prettier . -c"
   },
   "devDependencies": {
-    "concurrently": "^8.2.0"
+    "concurrently": "^8.2.0",
+    "eslint": "^9.9.0",
+    "@eslint/js": "^9.9.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "globals": "^15.9.0",
+    "prettier": "^3.3.3"
   }
 }
